objects/Branch2__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Code2__c</fullName>
        <defaultValue>&apos;Ad-12&apos;</defaultValue>
        <label>Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewEmail__c</fullName>
        <label>NewEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Branch2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B2-{000}</displayFormat>
        <label>Branch2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>NewRuleBranch2__c</fullName>
        <label>NewRuleBranch2</label>
    </sharingReasons>
</CustomObject>